--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,8 +17,6 @@ services:
     container_name: elasticsearch
     environment:
       - discovery.type=single-node
-    ports:
-      - 9200:9200
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9200"]
       interval: 30s
@@ -48,7 +46,9 @@ services:
     depends_on:
       - backend
     environment:
+      # when run locally
       # REACT_APP_BACKEND_URL: http://localhost:8080/api/v1
+      # when run on GCP
       REACT_APP_BACKEND_URL: http://35.240.195.123:8080/api/v1
 volumes:
   mysql_data:
